// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/gradle-wrapper/extract extractPackageFile() extracts all version line 1`] = `
Array [
  Object {
    "currentValue": "4.10.3",
    "datasource": "gradle-version",
    "depName": "gradle",
    "versioning": "gradle",
  },
]
`;

exports[`manager/gradle-wrapper/extract extractPackageFile() extracts bin version line 1`] = `
Array [
  Object {
    "currentValue": "4.8",
    "datasource": "gradle-version",
    "depName": "gradle",
    "versioning": "gradle",
  },
]
`;

exports[`manager/gradle-wrapper/extract extractPackageFile() extracts prerelease version line 1`] = `
Array [
  Object {
    "currentValue": "7.0-milestone-1",
    "datasource": "gradle-version",
    "depName": "gradle",
    "versioning": "gradle",
  },
]
`;

exports[`manager/gradle-wrapper/extract extractPackageFile() handles whitespace 1`] = `
Array [
  Object {
    "currentValue": "4.10.3",
    "datasource": "gradle-version",
    "depName": "gradle",
    "versioning": "gradle",
  },
]
`;
